# NetheriteEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.RU.md  README.md
src/cpp/include/Netherite/Core/: Core.cpp  Core.hpp  Vulkan.hpp
src/cpp/include/Netherite/Engine/Core/: DeviceData.hpp  InstanceData.hpp  PhysicalDeviceData.hpp
src/cpp/include/Netherite/Engine/Memory/: BufferData.hpp  ImageData.hpp
src/cpp/include/Redstone/: Core.hpp  Ops.hpp
src/cpp/include/Vulkan/: glm  spirv
src/cpp/include/Vulkan/vkfw/: glfw3.h  glfw3native.h  vkfw.hpp
src/cpp/include/Vulkan/vma/: vk_mem_alloc.h  vk_mem_alloc.hpp  vk_mem_alloc_enums.hpp  vk_mem_alloc_funcs.hpp  vk_mem_alloc_handles.hpp  vk_mem_alloc_raii.hpp  vk_mem_alloc_structs.hpp
src/cpp/include/Vulkan/vulkan/: vulkan.cppm  vulkan.hpp  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_funcs.hpp  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_raii.hpp  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_structs.hpp  vulkan_to_string.hpp  vulkan_video.hpp  vulkansc.cppm  vulkansc.hpp  vulkansc_enums.hpp  vulkansc_extension_inspection.hpp  vulkansc_format_traits.hpp  vulkansc_funcs.hpp  vulkansc_handles.hpp  vulkansc_hash.hpp  vulkansc_hpp_macros.hpp  vulkansc_raii.hpp  vulkansc_shared.hpp  vulkansc_static_assertions.hpp  vulkansc_structs.hpp  vulkansc_to_string.hpp
src/cpp/include/template/: Obj.cpp  Obj.hpp
src/cpp/test/: CMakeLists.txt
src/cpp/test/Cube/: CMakeLists.txt
src/cpp/test/TexGen/: CMakeLists.txt
(+13 files in other folders)
